--- a/register/css/quote-form.css
+++ b/register/css/quote-form.css
@@ -5,7 +5,7 @@
 }
 .quoteMeForm-section {
   background-attachment: fixed;
-  background-image: url(../images/bg.jpg);
+  background-image: url(../images/bg.png);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
