--- a/register/css/quote-form.css
+++ b/register/css/quote-form.css
@@ -103,7 +103,7 @@ h3.section-title {
   padding-left: 50px;
 }
 .input-group-icon {
-  background-color: #0247fe;
+  background-color: #03545D;
   border: 0 none;
   border-radius: 4px 0 0 4px;
   color: #fff;
@@ -177,7 +177,7 @@ h3.section-title {
 }
 .mgs-checkbox label,
 .mgs-radio label {
-  border: 1px solid #0247fe;
+  border: 1px solid #03545D;;
   border-radius: 10px;
   padding: 10px;
   display: block;
@@ -244,9 +244,9 @@ h3.section-title {
   padding-left: 10px;
 }
 .section .input-group-btn > .btn {
-  background-color: #0247fe;
+  background-color: #03545D;;
   color: #fff;
-  border: 1px solid #0247fe;
+  border: 1px solid #03545D;;
   border-radius: 4px 0 0 4px;
   height: 34px;
   padding: 4.5px 14px;
@@ -290,16 +290,16 @@ h3.section-title {
   display: none;
 }
 .service-item {
-  border: 1px solid #0247fe;
+  border: 1px solid #03545D;;
   border-radius: 10px;
   margin: 0 0 50px;
   padding: 30px 15px;
   text-align: center;
 }
 .service-item i {
-  border: 1px solid #0247fe;
+  border: 1px solid#03545D;
   border-radius: 50%;
-  color: #0247fe;
+  color: #03545D;
   font-size: 24px;
   line-height: 48px;
   width: 48px;
@@ -322,7 +322,7 @@ h3.section-title {
   text-align: center;
 }
 .review-submit-section h5 {
-  background-color: #0247fe;
+  background-color: #03545D;
   border-radius: 6px;
   color: #fff;
   padding: 10px;
@@ -358,14 +358,14 @@ h3.section-title {
 }
 .btn-default {
   background-color: transparent;
-  border-color: #0247fe;
+  border-color: #03545D;
   color: #222;
 }
 .form-control[disabled],
 .form-control[readonly],
 .form-control {
   background-color: transparent;
-  border: 1px solid #0247fe;
+  border: 1px solid #03545D;
 }
 .btn {
   overflow: hidden;
@@ -373,8 +373,8 @@ h3.section-title {
   padding: 6px 25px;
 }
 .btn-custom {
-  background-color: #0247fe;
-  border: 1px solid #0247fe;
+  background-color: #03545D;;
+  border: 1px solid #03545D;
   box-shadow: 0 0 1px transparent;
   color: #fff;
   display: inline-block;
